--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest __test__/unit/admins.services.unit.spec.js --forceExit",
+    "test:unit:silent": "jest __test__/unit/* --silent --forceExit",
+    "test:unit:coverage": "jest __test__/unit/* --coverage --forceExit",
     "start": "nodemon app"
   },
   "keywords": [],
