feat : admins 3계층 테스트 코드 추가 chore : authToken adminAuthToken 으로 수정

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:unit": "jest __test__/unit/admins.services.unit.spec.js --forceExit",
+    "test:unit": "jest __test__/unit/admins.repositories.unit.spec.js --forceExit",
     "test:unit:silent": "jest __test__/unit/* --silent --forceExit",
     "test:unit:coverage": "jest __test__/unit/* --coverage --forceExit",
     "start": "nodemon app"
